--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
     <string name="privacy_policy">Политика конфиденциальности</string>
     <string name="not_accepted">Не указано</string>
     <string name="about_user">О пользователе</string>
+    <string name="version_app">version 3.1</string>
 
 
 </resources>
