--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Tam Tam</string>
+    <string name="work_category">Работа, Вакансии</string>
     <string name="no_connection">Нет Интернет соединения!</string>
     <string name="search">   Поиск ...</string>
     <string name="metro_stations">   Станции метро:</string>
@@ -70,6 +71,7 @@
     <string name="not_accepted">Не указано</string>
     <string name="about_user">О пользователе</string>
     <string name="version_app">version 3.1</string>
+    <string name="apply">Применить</string>
 
 
 </resources>
